--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1012,19 +1012,12 @@ min-height: 500px;
 }
 
 
-buttonpic1{
-  background: #c00;
-	border-radius: 25px;
-}
 
 
-}
-.i-top-left,.i-top-center,.i-top-right,
-.i-middle-right,.i-middle-center,.i-middle-left,
-.i-bottom-right,.i-bottom-center,.i-bottom-left{
+
+.i-top-left{
   position: relative;
   text-align: left;
-
   transition: transform .2s; /* Animation */
  
 }
@@ -1032,7 +1025,7 @@ buttonpic1{
   position: relative;
   color: black;
   bottom: 75px;
-  left: 0px;
+  left: 60px;
   font-family: 'Marvel', sans-serif;
   z-index: 1;
   font-size: 25px;
