--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,8 +5,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
+/* -----------------------All the Common styling between the three pages are below -------------------------------------*/
 h1{
-    font-family: 'Marvel', sans-serif;
+    font-family: 'Marvel', 'Raleway',sans-serif;
     font-style: normal;
     font-size: 3.5em;
     font-weight: bold;
@@ -16,7 +17,7 @@ h1{
 }
 
 h2{
-  font-family: 'Marvel', sans-serif;
+  font-family: 'Marvel','Raleway',sans-serif;
   font-weight: 400;
   font-style: regular;
   font-weight: bold;
@@ -27,7 +28,7 @@ h2{
 }
 
 h3{
-    font-family: 'Rubik', sans-seriff;
+    font-family: 'Marvel','Raleway',sans-serif;
     font-style: normal;
     font-variant: normal;
     font-weight: bold;
@@ -35,70 +36,8 @@ h3{
     color: black;
     
 }
-
-.RideHulk h2 {
-  color:black;
-}
-
-.RideHulkDescription p {
-  color: green;
-}
-
-.RideHulkOpeningTimes {
-  color: green;
-}
-
-.RideIronMan h2 {
-  color:black;
-}
-
-.RideIronMan p {
-  color:red;
-}
-
-.RideIronManOpeningTimes {
-  color: red;
-}
-
-.RideSpiderman h2 {
-  color:black;
-}
-
-.RideSpiderman p {
-  color:red;
-}
-
-.RideSpidermanOpeningTimes {
-  color: red;
-}
-
-#i-aip-map-image {
-  box-shadow: 10px 10px 5px grey;
-  border-radius: 20px;  
-}
-#InfinityImageMap {
-  padding-left: 1%;
-}
-#InfinityCaption{
-  padding-left: 45%;
-  font-family: 'Marvel', sans-serif;
-  font-style: normal;
-  font-size: 1.3em;
-  font-weight: bold;
-}
-#i-aip-ironman-image {
-  box-shadow: rgba(170, 5, 5, 0.8) 0px 7px 29px 0px; 
-  border-radius: 20px; 
-}
-
-
-.grid-container-aip {
-    display: grid;
-    grid-template-columns: auto auto auto ;
-}
-
 p{
-  font-family: 'Rubik','Marvel', sans-serif; 
+  font-family: 'Rubik','Marvel','Raleway',sans-serif;
   font-weight: 400;
   font-style: normal; 
   font-size: 1.2em;
@@ -107,63 +46,9 @@ p{
 }
 
 tr{
-    font-family: 'Rubik', sans-serif;
+    font-family:'Rubik','Marvel','Raleway',sans-serif;
     font-weight: 300;
 }
-
-/* Creating a body wrap for adding a background image for index page  */
-.index-body-wrap {
-    position: relative;
-  }
-  
-.index-body-wrap:before {
-    content: ' ';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.1;
-    background-image:  url('https://www.wallpaperup.com/uploads/wallpapers/2013/08/28/139975/7d64d84d499b26ed32601b80c6c6fb66.jpg');
-    /* background-repeat: round; */
-    background-size: width;
-
-
-
-  }
-.index-body-content {
-    position: relative;
-  }
-
-
-/* Creating a body wrap for adding a background image for about the park page  */
-.about-the-park-body-wrap {
-    position: relative;
-  }
-
-.about-the-park-body-wrap:before {
- 
-    content: ' ';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    min-width: 1500px;
-    height: 100%;
-    opacity: 0.1;
-    background-image:  url('https://wallpaperaccess.com/full/4065699.jpg');
-    background-repeat:round;
-    background-size:width;
-
-
-  }
-
-.about-the-park-body-content {
-    position: relative;
-  }
-
 /* navigation bar   */
 .navbar {
   list-style-type: none;
@@ -181,7 +66,7 @@ tr{
 /* navigation bar items  */
 .nav-item-page-link {
   float: left;
-  font-family: 'Marvel', sans-serif;
+  font-family: 'Marvel','Raleway',sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 1.2em;
@@ -194,7 +79,7 @@ tr{
 /* navigation bar logo  */
 .nav-item-page-button {
     float: right;
-    font-family: 'Marvel', sans-serif;
+    font-family: 'Marvel','Raleway',sans-serif;
     font-style: normal;
     font-size: 1.2em;
     padding: 14px 16px; 
@@ -241,88 +126,63 @@ footer{
   min-width: 1500px;
 	text-align: left;
 	font: bold 16px sans-serif;
-	/* padding: 50px 50px 60px 50px; */
-  /* padding: 15px 15px 20px 15px; */
   padding-left: 15px;
   padding-right: 0%;
 	margin-top: 70px;
-
   opacity: 0.9;
   position: relative;
 
 
 }
 
-.index-footer-distributed{
-	background-color: #333;
-	box-sizing: border-box;
-	width: 100%;
-	text-align: left;
-	font: bold 16px sans-serif;
-	/* padding: 50px 50px 60px 50px; */
-  padding: 15px 15px 20px 15px;
-	margin-top: 70px;
-  opacity: 0.9;
-  position: relative;
-
-
-}
 
 .footer-distributed .footer-left,
 .footer-distributed .footer-center,
-.footer-distributed .footer-right,
-.index-footer-distributed .footer-left,
-.index-footer-distributed .footer-center,
-.index-footer-distributed .footer-right{
+.footer-distributed .footer-right
+{
 	display: inline-block;
 	vertical-align: top;
 }
 
 /* Footer left */
-.footer-distributed .footer-left,
-.index-footer-distributed .footer-left{
+.footer-distributed .footer-left
+{
 	width: 20%;
   margin-right: 3%;
   margin-left: 0%;
   
 }
 
-.footer-distributed h3,
-.index-footer-distributed h3{
+.footer-distributed h3{
 	color:  #ffffff;
 	font: normal 17px 'Cookie', cursive;
 	margin: 0;
 }
 
 /* The company logo */
-.footer-distributed .footer-left img,
-.index-footer-distributed .footer-left img{
+.footer-distributed .footer-left img{
 	width: 40%;
 }
 
-.footer-distributed h3 span,
-.index-footer-distributed h3 span{
+.footer-distributed h3 span{
 	color:  #e0ac1c;
   
 }
 
 /* Footer links */
-.footer-distributed .footer-links,
-.index-footer-distributed .footer-links{
+.footer-distributed .footer-links{
 	color:  #ffffff;
 	margin: 20px 0 12px;
 }
 
-.footer-distributed .footer-links a,
-.index-footer-distributed .footer-links a{
+.footer-distributed .footer-links a{
 	display:inline-block;
 	line-height: 1.8;
 	text-decoration: none;
 	color:  inherit;
 }
 
-.footer-distributed .footer-company-name,
-.index-footer-distributed .footer-company-name{
+.footer-distributed .footer-company-name{
 	color:  #8f9296;
 	font-size: 14px;
 	font-weight: normal;
@@ -330,16 +190,14 @@ footer{
 }
 
 /* Footer Center */
-.footer-distributed .footer-center,
-.index-footer-distributed .footer-center{
+.footer-distributed .footer-center{
 	width: 20%;
   margin-right: 20%;
   margin-left: 15%;
 }
 
 
-.footer-distributed .footer-center i,
-.index-footer-distributed .footer-center i{
+.footer-distributed .footer-center i{
 	background-color:  #33383b;
 	color: #ffffff;
 	font-size: 25px;
@@ -352,44 +210,38 @@ footer{
 	vertical-align: middle;
 }
 
-.footer-distributed .footer-center i.fa-envelope,
-.index-footer-distributed .footer-center i.fa-envelope{
+.footer-distributed .footer-center i.fa-envelope{
 	font-size: 17px;
 	line-height: 38px;
 }
 
-.footer-distributed .footer-center p,
-.index-footer-distributed .footer-center p{
+.footer-distributed .footer-center p{
 	display: inline-block;
 	color: #ffffff;
 	vertical-align: middle;
 	margin:0;
 }
 
-.footer-distributed .footer-center p span,
-.index-footer-distributed .footer-center p span{
+.footer-distributed .footer-center p span{
 	display:block;
 	font-weight: normal;
 	font-size:14px;
 	line-height:2;
 }
 
-.footer-distributed .footer-center p a,
-.index-footer-distributed .footer-center p a{
+.footer-distributed .footer-center p a{
 	color:  #e0ac1c;
 	text-decoration: none;;
 }
 
 
 /* Footer Right */
-.footer-distributed .footer-right,
-.index-footer-distributed .footer-right{
+.footer-distributed .footer-right{
 	width: 20%;
   
 }
 
-.footer-distributed .footer-company-about,
-.index-footer-distributed .footer-company-about{
+.footer-distributed .footer-company-about{
 	line-height: 20px;
 	color:  #92999f;
 	font-size: 13px;
@@ -397,8 +249,7 @@ footer{
 	margin: 10;
 }
 
-.footer-distributed .footer-company-about span,
-.index-footer-distributed .footer-company-about span{
+.footer-distributed .footer-company-about span{
 	display: block;
 	color:  #ffffff;
 	font-size: 18px;
@@ -406,13 +257,11 @@ footer{
 	margin-bottom: 20px;
 }
 
-.footer-distributed .footer-icons,
-.index-footer-distributed .footer-icons{
+.footer-distributed .footer-icons{
 	margin-top: 25px;
 }
 
-.footer-distributed .footer-icons a,
-.index-footer-distributed .footer-icons a{
+.footer-distributed .footer-icons a{
 	display: inline-block;
 	width: 35px;
 	height: 35px;
@@ -429,10 +278,18 @@ footer{
 	margin-bottom: 5px;
 }
 
+/* Hover Animation Effect  */
+.top-right:hover,.top-center:hover,.top-left:hover,
+.middle-right:hover,.middle-center:hover,.middle-left:hover,
+.bottom-right:hover,.bottom-center:hover,.bottom-left:hover,#i-aip-spiderman-image:hover {
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transition: transform 0.2s;
+}
+
+
 /* All 4D ride object uses same red  color to help user identify */
 #tod-ultron-image {
   border: 2px solid rgb(240, 19, 30);
-  /* box-shadow: 10px 5px 5px rgb(240, 19, 30); */
   box-shadow: 10px 10px 5px rgb(240, 19, 30);
     -moz-box-shadow: 10px 10px 5px rgb(240, 19, 30);
     -webkit-box-shadow: 10px 10px 5px rgb(240, 19, 30);
@@ -452,31 +309,127 @@ footer{
 }
 
 
-
 /* All hulk  object uses same hulk green color to help user identify */
 #i-tod-hulk-image ,#i-aip-hulk-image {
   border: 2px solid #008000;
     box-shadow: rgba(0,128,0, 0.8) 0px 7px 29px 0px;  
     border-radius: 20px;  
-  
 }
+
+/* --------------------------------About the park specific styling/positioning is below--------------------------------------  */
+/* Creating a body wrap for adding a background image for about the park page  */
+.about-the-park-body-wrap {
+  position: relative;
+}
+
+.about-the-park-body-wrap:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  min-width: 1500px;
+  height: 100%;
+  opacity: 0.1;
+  background-image:  url('https://wallpaperaccess.com/full/4065699.jpg');
+  background-repeat:round;
+  background-size:width;
+}
+
+.about-the-park-body-content {
+  position: relative;
+}
+
 #i-hulk-image {
-  filter: brightness(50%);
-  border: 2px solid #008000;
-  box-shadow: rgba(0,128,0, 0.8) 0px 7px 29px 0px;  
-  border-radius: 20px;  
+filter: brightness(50%);
+border: 2px solid #008000;
+box-shadow: rgba(0,128,0, 0.8) 0px 7px 29px 0px;  
+border-radius: 20px;  
 }
 #i-spiderman-image {
-  filter: brightness(50%);
-  border: 2px solid #2B3784;
-  box-shadow: rgba(8, 123, 190, 0.8) 0px 7px 29px 0px;
+filter: brightness(50%);
+border: 2px solid #2B3784;
+box-shadow: rgba(8, 123, 190, 0.8) 0px 7px 29px 0px;
 border-radius: 20px;
 }
 #i-ironman-image {
-  border: 2px solid rgb(240, 19, 30);
-    box-shadow: rgba(170, 5, 5, 0.8) 0px 7px 29px 0px;   
-    border-radius: 20px;
-    filter: brightness(50%);
+border: 2px solid rgb(240, 19, 30);
+  box-shadow: rgba(170, 5, 5, 0.8) 0px 7px 29px 0px;   
+  border-radius: 20px;
+  filter: brightness(50%);
+}
+
+.RideHulk h2,
+.RideIronMan h2 ,
+.RideSpiderman h2{
+  color:black;
+}
+
+.RideHulkDescription p,
+.RideHulkOpeningTimes  {
+  color: green;
+}
+
+.RideIronMan p,
+.RideIronManOpeningTimes ,
+.RideSpiderman p,
+.RideSpidermanOpeningTimes {
+  color:red;
+}
+
+#i-aip-map-image {
+  box-shadow: 10px 10px 5px grey;
+  border-radius: 20px;  
+}
+#InfinityImageMap {
+  padding-left: 1%;
+}
+#InfinityCaption{
+  padding-left: 45%;
+  font-family: 'Marvel', sans-serif;
+  font-style: normal;
+  font-size: 1.3em;
+  font-weight: bold;
+}
+#i-aip-ironman-image {
+  box-shadow: rgba(170, 5, 5, 0.8) 0px 7px 29px 0px; 
+  border-radius: 20px; 
+}
+
+
+.grid-container-aip {
+    display: grid;
+    grid-template-columns: auto auto auto ;
+}
+
+
+
+
+/* --------------------------------Things To Do specific styling/positioning is below--------------------------------------  */
+
+/* Creating a body wrap for adding a background image for Things to do page  */
+.things-to-do-body-wrap {
+  position: relative;
+}
+
+.things-to-do-body-wrap:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  min-width: 1500px;
+  height: 100%;
+  opacity: 0.1;
+  background-image:  url("https://wallpaperaccess.com/full/4065699.jpg");
+  background-repeat:round;
+  background-size:width;
+
+}
+.things-to-do-body-content {
+  position: relative; 
 }
 
 /* All live shows  object uses same grey color to help user identify */
@@ -500,74 +453,11 @@ border-radius: 20px;
       -webkit-box-shadow: 10px 10px 5px #C0A469;
       -khtml-box-shadow: 10px 10px 5px #C0A469;
   border-radius: 20px; }
-  
-
-/* Used mostly red and orange colours as:
-   1) Marvel heavily uses red in its franchise
-   2) We want to attract customers and direct them to Buy Tickets
-   -we believe bright colours will increase ticket purchases
-*/
-
-
-#i-ticket-image { 
-  border: 3px solid RGB(240, 20, 00);
-  border-radius: 20px;
-  box-shadow: 15px 15px 15px RGB(255, 50, 30);
-  -webkit-box-shadow: 4px 4px 2px RGB(255, 120, 70);
-  -moz-box-shadow: 4px 4px 4px RGB(255, 120, 70);
-}
-
-#i-reserve-image { 
-  border: 3px solid RGB(240, 20, 00);
- border-radius: 20px;
-  box-shadow: 15px 15px 15px RGB(255, 50, 30);
-  -webkit-box-shadow: 4px 4px 2px RGB(255, 120, 70);
-  -moz-box-shadow: 4px 4px 4px RGB(255, 120, 70);
-}
-
-#i-safety-image { 
-  border: 3px solid RGB(240, 20, 00);
-  border-radius: 20px;
-  box-shadow: 15px 15px 15px RGB(255, 50, 30);
-  -webkit-box-shadow: 4px 4px 2px RGB(255, 120, 70);
-  -moz-box-shadow: 4px 4px 4px RGB(255, 120, 70);
-}
-
-
-/* -------------Things to Do Specific styling is below------------------------ */
-
-/* Creating a body wrap for adding a background image for Things to do page  */
-.things-to-do-body-wrap {
-  position: relative;
-
-}
-
-.things-to-do-body-wrap:before {
-  content: ' ';
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  min-width: 1500px;
-  height: 100%;
-  opacity: 0.1;
-  background-image:  url("https://wallpaperaccess.com/full/4065699.jpg");
-  background-repeat:round;
-  background-size:width;
- 
-
-
-}
-.things-to-do-body-content {
-  position: relative; 
-}
-
 
 .outer-grid{
   position: relative;
 }
-/* Things to do page  */
+/* Things to do page is divided into three grids for ease of styling */
 .top-grid {
   display: flex;
   flex-wrap: wrap;
@@ -582,11 +472,6 @@ border-radius: 20px;
  
 }
 
-.top-right:hover,.top-center:hover,.top-left:hover,
-.middle-right:hover,.middle-center:hover,.middle-left:hover,
-.bottom-right:hover,.bottom-center:hover,.bottom-left:hover {
-  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-}
 .middle-grid {
   display: flex;
   flex-wrap: wrap;
@@ -721,7 +606,7 @@ border-radius: 20px;
  
 }
 
-/* Things to do page image slider  */
+/* Things to do page Image slider  */
 .trigger {
   display: none;
 }
@@ -857,7 +742,61 @@ border-radius: 20px;
 
 
 
-/* INDEX PAGE SPECIFIC POSITIONING  */
+/* --------------------------------Main/Index page specific styling/positioning is below--------------------------------------  */
+
+/* Creating a body wrap for adding a background image for index page  */
+.index-body-wrap {
+  position: relative;
+}
+
+.index-body-wrap:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
+  background-image:  url('https://www.wallpaperup.com/uploads/wallpapers/2013/08/28/139975/7d64d84d499b26ed32601b80c6c6fb66.jpg');
+  background-size: width;
+}
+.index-body-content {
+  position: relative;
+}
+
+/* Used mostly red and orange colours as:
+   1) Marvel heavily uses red in its franchise
+   2) We want to attract customers and direct them to Buy Tickets
+   -we believe bright colours will increase ticket purchases
+*/
+
+
+#i-ticket-image { 
+  border: 3px solid RGB(240, 20, 00);
+  border-radius: 20px;
+  box-shadow: 15px 15px 15px RGB(255, 50, 30);
+  -webkit-box-shadow: 4px 4px 2px RGB(255, 120, 70);
+  -moz-box-shadow: 4px 4px 4px RGB(255, 120, 70);
+}
+
+#i-reserve-image { 
+  border: 3px solid RGB(240, 20, 00);
+ border-radius: 20px;
+  box-shadow: 15px 15px 15px RGB(255, 50, 30);
+  -webkit-box-shadow: 4px 4px 2px RGB(255, 120, 70);
+  -moz-box-shadow: 4px 4px 4px RGB(255, 120, 70);
+}
+
+#i-safety-image { 
+  border: 3px solid RGB(240, 20, 00);
+  border-radius: 20px;
+  box-shadow: 15px 15px 15px RGB(255, 50, 30);
+  -webkit-box-shadow: 4px 4px 2px RGB(255, 120, 70);
+  -moz-box-shadow: 4px 4px 4px RGB(255, 120, 70);
+}
+
+
 
 .video-container {
   position:absolute;
@@ -1119,8 +1058,3 @@ min-height: 500px;
  }
 
 
-/*Hovering Code for About the Park*/
-#i-aip-spiderman-image:hover{
-    transform: scale(1.1);
-    transition: transform 0.2s;
-}
