--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -93,6 +93,7 @@ tr{
     position: absolute;
     left: 0;
     top: 0;
+    min-width: 1500px;
     width: 100%;
     height: 100%;
     opacity: 0.1;
